<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:layout_width="300dp"
    android:layout_height="400dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingLeft="8dp"
    android:paddingRight="8dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/profile_item_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="8dp"
        app:cardMaxElevation="4dp"
        app:cardElevation="2dp">

        <LinearLayout
            android:id="@+id/profile_item_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/profile_item_image"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:contentDescription="@string/cd_profile_image"
                android:scaleType="fitCenter"
                android:src="@mipmap/ic_launcher_round" />

            <TextView
                android:id="@+id/profile_item_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                android:gravity="center"
                android:padding="2dp"
                android:text="@string/not_available"
                android:textSize="12sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_item_age_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="@string/age_label"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_item_age_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="@string/not_available"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/profile_item_city_label"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="@string/location_label"
                    android:textSize="12sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profile_item_city_text"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:padding="2dp"
                    android:text="@string/not_available"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/profile_item_button_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="horizontal">

                <ToggleButton
                    android:id="@+id/profile_item_positive_button"
                    style="?android:attr/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorGreen"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textOff="@string/accept_button_text" />

                <ToggleButton
                    android:id="@+id/profile_item_negative_button"
                    style="?android:attr/button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="12dp"
                    android:layout_weight="1"
                    android:backgroundTint="@color/colorRed"
                    android:textAllCaps="false"
                    android:textColor="@color/colorWhite"
                    android:textOff="@string/reject_button_text" />
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>